test/netlist/error/rom-arity-2.bop
ROM r (2, 3) = text { 110111 }

write(a:[2]) = o:[2]
where
  o:[2] = rom_r(a:[2]);
end where;
